* layout bug

--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -177,8 +177,6 @@ div.title {
 	margin:15px 0 10px 0;
 	padding-left:10px;
 	width:97%;
-	left: -100px;
-	position: relative;
 }
 
 
